--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
-<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 <title>AK Chit Funds</title>
 <link href="https://fonts.googleapis.com/css2?family=Sora:wght@300;400;500;600;700;800&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
 <style>
@@ -17,9 +16,11 @@
 *{margin:0;padding:0;box-sizing:border-box;-webkit-tap-highlight-color:transparent;}
 body{font-family:'Sora',sans-serif;background:var(--bg);color:var(--text);max-width:430px;margin:0 auto;min-height:100vh;}
 
+/* LOGIN SCREEN */
 #login-overlay{position:fixed;inset:0;background:rgba(0,0,0,0.9);z-index:3000;display:flex;align-items:center;justify-content:center;padding:20px;}
 .login-card{background:var(--surface);border-radius:24px;padding:25px;width:100%;max-width:280px;border:1px solid var(--border);text-align:center;}
 
+/* TOPBAR */
 .topbar{position:sticky;top:0;z-index:100;background:rgba(10,15,30,.97);backdrop-filter:blur(20px);border-bottom:1px solid var(--border);padding:12px 20px;display:flex;align-items:center;justify-content:space-between;}
 .brand-name{font-weight:800;background:var(--gold);-webkit-background-clip:text;-webkit-text-fill-color:transparent;font-size:16px;}
 .logout-btn{background:rgba(239,68,68,0.1); border:1px solid var(--red); color:var(--red); padding:5px 12px; border-radius:8px; font-size:10px; font-weight:700; cursor:pointer;}
@@ -29,6 +30,7 @@ body{font-family:'Sora',sans-serif;background:var(--bg);color:var(--text);max-wi
 @keyframes fadeUp{from{opacity:0;transform:translateY(10px)}to{opacity:1;transform:translateY(0)}}
 .content{padding:20px 20px 180px;}
 
+/* DASHBOARD COMPONENTS */
 .stats-row{display:grid;grid-template-columns:repeat(3,1fr);gap:10px;margin-bottom:20px;}
 .stat-box{background:var(--surface);border:1px solid var(--border);border-radius:14px;padding:14px 10px;text-align:center;}
 .stat-val{font-size:14px;font-weight:800;font-family:'JetBrains Mono',monospace;}
@@ -36,25 +38,27 @@ body{font-family:'Sora',sans-serif;background:var(--bg);color:var(--text);max-wi
 .pay-big-btn{width:100%;background:linear-gradient(135deg,#f59e0b,#d97706);border:none;border-radius:18px;padding:18px;color:#000;font-weight:800;cursor:pointer;margin-bottom:20px;display:flex;align-items:center;gap:12px;}
 .primary-btn{width:100%;background:var(--gold);border:none;border-radius:14px;padding:16px;color:#000;font-weight:800;cursor:pointer;font-family:inherit;}
 .secondary-btn{width:100%;background:var(--surface2);border:1px solid var(--border);border-radius:12px;padding:12px;color:var(--text);margin-top:10px;cursor:pointer;}
-.delete-btn{width:100%;background:rgba(239,68,68,0.1);border:1px solid var(--red);border-radius:14px;padding:12px;color:var(--red);margin-top:10px;cursor:pointer;font-weight:700;font-size:12px;}
+.wa-btn{background:rgba(37,211,102,0.1); border:1px solid var(--wa); color:var(--wa); border-radius:12px; padding:10px; cursor:pointer; font-weight:700; font-size:11px; display:flex; align-items:center; gap:8px;}
+
+/* TABLES */
+.table-wrap{overflow-x:auto; margin-top:10px; border-radius:12px; border:1px solid var(--border);}
+table{width:100%; border-collapse:collapse; font-size:9px; text-align:left;}
+th{background:var(--surface2); padding:10px; color:var(--muted); text-transform:uppercase; font-size:8px;}
+td{padding:10px; border-bottom:1px solid var(--border);}
 
 .card{background:var(--surface);border:1px solid var(--border);border-radius:20px;padding:15px;margin-bottom:16px;}
 .form-input{width:100%;background:var(--surface2);border:1px solid var(--border);border-radius:12px;padding:12px;color:var(--text);font-family:inherit;outline:none;margin-bottom:10px;font-size:13px;}
 
-/* ORIGINAL BOTTOM NAV RESTORED */
-.bottom-nav{position:fixed;bottom:0;left:50%;transform:translateX(-50%);width:100%;max-width:430px;background:rgba(17,24,39,0.98);backdrop-filter:blur(20px);border-top:1px solid var(--border);display:flex;flex-direction:column;z-index:100;}
-.quick-add-bar{display:none;gap:8px;padding:10px 12px;background:rgba(10,15,30,0.95);border-bottom:1px solid var(--border);}
-.quick-btn{flex:1;display:flex;align-items:center;justify-content:center;gap:6px;padding:12px;border-radius:12px;font-size:11px;font-weight:700;cursor:pointer;border:1px solid var(--border);color:var(--text);}
-.bottom-nav-btns{display:flex;padding:10px 0 calc(10px + env(safe-area-inset-bottom));}
+/* RESTORED ORIGINAL BOTTOM NAV */
+.bottom-nav{position:fixed;bottom:0;left:50%;transform:translateX(-50%);width:100%;max-width:430px;background:rgba(17,24,39,.97);backdrop-filter:blur(20px);border-top:1px solid var(--border);display:flex;flex-direction:column;z-index:100;}
+.quick-add-bar{display:none;gap:8px;padding:8px 12px;background:rgba(10,15,30,0.95);border-bottom:1px solid var(--border);}
+.quick-btn{flex:1;display:flex;align-items:center;justify-content:center;gap:6px;padding:10px;border-radius:12px;font-size:11px;font-weight:700;cursor:pointer;border:1px solid; border-color:var(--border); color:var(--text);}
+.bottom-nav-btns{display:flex;padding:8px 0 calc(8px + env(safe-area-inset-bottom));}
 .nav-item{flex:1;display:flex;flex-direction:column;align-items:center;gap:4px;cursor:pointer;}
 .nav-label{font-size:10px;font-weight:500;color:var(--muted);}
 .nav-item.active .nav-label{color:var(--accent);}
 
-.table-wrap{overflow-x:auto; margin-top:10px; border-radius:12px; border:1px solid var(--border);}
-table{width:100%; border-collapse:collapse; font-size:10px; text-align:left;}
-th{background:var(--surface2); padding:10px; color:var(--muted); text-transform:uppercase; font-size:8px;}
-td{padding:10px; border-bottom:1px solid var(--border);}
-
+/* MODALS */
 .modal-overlay{position:fixed;inset:0;background:rgba(0,0,0,0.85);backdrop-filter:blur(8px);z-index:1500;display:none;align-items:center;justify-content:center;padding:20px;}
 .modal-overlay.open{display:flex;}
 .modal{background:var(--surface);border-radius:24px;width:100%;max-width:380px;padding:24px;border:1px solid var(--border);}
@@ -67,7 +71,7 @@ td{padding:10px; border-bottom:1px solid var(--border);}
     <div style="font-size:30px; margin-bottom:10px;">🔐</div>
     <h3 style="margin-bottom:15px;">AK Funds</h3>
     <input type="text" id="login-id" class="form-input" placeholder="Name or Mobile No">
-    <button class="primary-btn" onclick="handleLogin()">Sign In</button>
+    <button class="primary-btn" onclick="handleLogin()" style="width:100%;">Sign In</button>
   </div>
 </div>
 
@@ -100,7 +104,10 @@ td{padding:10px; border-bottom:1px solid var(--border);}
 </div>
 
 <div class="page" id="page-groups">
-  <div class="content"><div style="font-size:22px;font-weight:800;margin-bottom:20px;">Groups</div><div id="groupReportContainer"></div></div>
+  <div class="content">
+    <div style="font-size:22px;font-weight:800;margin-bottom:20px;">Groups</div>
+    <div id="groupReportContainer"></div>
+  </div>
 </div>
 
 <div class="modal-overlay" id="payModal">
@@ -120,7 +127,7 @@ td{padding:10px; border-bottom:1px solid var(--border);}
             <input type="checkbox" id="inp-picked" onchange="togglePickedVal()">
             <label style="font-size:12px;">Chit Picked?</label>
         </div>
-        <input type="number" id="inp-picked-val" class="form-input" placeholder="Value Amount" style="display:none;">
+        <input type="number" id="inp-picked-val" class="form-input" placeholder="Picked Value Amount" style="display:none;">
     </div>
     <button class="primary-btn" onclick="savePayment()">Save Record</button>
     <button class="secondary-btn" style="width:100%" onclick="closeModal('payModal')">Cancel</button>
@@ -135,7 +142,7 @@ td{padding:10px; border-bottom:1px solid var(--border);}
         <select id="nm-group" class="form-input"></select>
         <input type="tel" id="nm-phone" class="form-input" placeholder="Phone No">
         <button class="primary-btn" onclick="executeAddMember()">Save Member</button>
-        <button class="delete-btn" id="nm-delete-btn" style="display:none;" onclick="deleteMember()">Delete Member</button>
+        <button class="logout-btn" id="nm-delete-btn" style="display:none; width:100%; margin-top:10px;" onclick="deleteMember()">Delete Member</button>
         <button class="secondary-btn" style="width:100%" onclick="closeModal('addMemberModal')">Cancel</button>
     </div>
 </div>
@@ -147,15 +154,15 @@ td{padding:10px; border-bottom:1px solid var(--border);}
         <input type="text" id="ng-name" class="form-input" placeholder="Group Name">
         <input type="number" id="ng-months" class="form-input" placeholder="Duration (Months)">
         <button class="primary-btn" onclick="executeAddGroup()">Save Group</button>
-        <button class="delete-btn" id="ng-delete-btn" style="display:none;" onclick="deleteGroup()">Delete Group</button>
+        <button class="logout-btn" id="ng-delete-btn" style="display:none; width:100%; margin-top:10px;" onclick="deleteGroup()">Delete Group</button>
         <button class="secondary-btn" style="width:100%" onclick="closeModal('addGroupModal')">Cancel</button>
     </div>
 </div>
 
 <nav class="bottom-nav" id="main-nav" style="display:none;">
   <div class="quick-add-bar" id="admin-quick-add">
-    <div class="quick-btn" onclick="openModal('addMemberModal')">➕ Member</div>
-    <div class="quick-btn" onclick="openModal('addGroupModal')">🏦 Group</div>
+    <div class="quick-btn member" onclick="openModal('addMemberModal')">➕ New Member</div>
+    <div class="quick-btn group" onclick="openModal('addGroupModal')">🏦 New Group</div>
   </div>
   <div class="bottom-nav-btns">
     <div class="nav-item active" onclick="navigate('home', this)"><span style="font-size:18px;">🏠</span><span class="nav-label">Home</span></div>
@@ -185,9 +192,9 @@ async function refreshData(){
 function updateUI(){
     document.getElementById('st-members').textContent = members.length;
     document.getElementById('st-groups').textContent = groups.length;
-    const t = new Date().toISOString().split('T')[0];
-    const todayVal = payments.filter(p=>p.paid_on?.startsWith(t)).reduce((s,p)=>s+(p.amount_paid||0),0);
-    document.getElementById('st-today').textContent = `₹${(todayVal/1000).toFixed(1)}K`;
+    const today = new Date().toISOString().split('T')[0];
+    const tCol = payments.filter(p=>p.paid_on?.startsWith(today)).reduce((s,p)=>s+(p.amount_paid||0),0);
+    document.getElementById('st-today').textContent = `₹${(tCol/1000).toFixed(1)}K`;
     
     if(curRole === 'admin') {
         const mSel = document.getElementById('homeMemberSelect');
@@ -199,7 +206,7 @@ function updateUI(){
         const mEdSel = document.getElementById('nm-select');
         mEdSel.innerHTML = '<option value="new">-- Enroll New Member --</option>';
         members.forEach(m => mEdSel.innerHTML += `<option value="${m.id}">${m.name} (${m.group_name})</option>`);
-        
+
         const gEdSel = document.getElementById('ng-select');
         gEdSel.innerHTML = '<option value="new">-- Create New Group --</option>';
         groups.forEach(g => gEdSel.innerHTML += `<option value="${g.id}">${g.name}</option>`);
@@ -207,8 +214,8 @@ function updateUI(){
         const nmGSel = document.getElementById('nm-group');
         nmGSel.innerHTML = '<option value="">-- Assign Group --</option>';
         groups.forEach(g => nmGSel.innerHTML += `<option value="${g.name}">${g.name}</option>`);
-        renderGroupsView();
     }
+    renderGroupsView();
 }
 
 function handleLogin() {
@@ -229,7 +236,7 @@ function handleLogin() {
             document.getElementById('welcome-msg').textContent = `Welcome, ${found.name}`;
             renderMemberTable(payments.filter(px => px.name === curMName), 'memberPersonalPanel', curMName);
             navigate('home');
-        } else { alert('Mobile not found'); return; }
+        } else { alert('Mobile number not found'); return; }
     }
     document.getElementById('login-overlay').style.display = 'none';
     refreshData();
@@ -250,9 +257,12 @@ function renderMemberTable(pays, targetId, name) {
     let html = '';
     Object.entries(grouped).forEach(([gn, list]) => {
         const pk = list.find(x => x.chit_picked === 'Yes');
-        html += `<div class="card"><div style="display:flex;justify-content:space-between;margin-bottom:10px;"><b>📂 ${gn}</b>${pk?`<span style="background:var(--green);color:#000;font-size:9px;padding:2px 6px;border-radius:8px;font-weight:800;">PICKED: ₹${pk.picked_value}</span>`:''}</div>
-            <div class="table-wrap"><table><thead><tr><th>Date</th><th>Chit Amt</th><th>Paid</th><th>Balance</th><th>Status</th></tr></thead>
-            <tbody>${list.map(x=>`<tr><td>${new Date(x.paid_on).toLocaleDateString()}</td><td>₹${x.chit_value}</td><td>₹${x.amount_paid}</td><td style="color:var(--accent)">₹${x.balance_amt}</td><td>${x.chit_picked==='Yes'?'✅':'-'}</td></tr>`).join('')}</tbody>
+        html += `<div class="card">
+            <div style="display:flex;justify-content:space-between;align-items:center;margin-bottom:10px;"><b>📂 ${gn}</b>
+            ${pk?`<span style="background:var(--green);color:#000;font-size:9px;padding:2px 6px;border-radius:8px;font-weight:800;">PICKED: ₹${pk.picked_value}</span>`:''}</div>
+            <div class="table-wrap"><table>
+                <thead><tr><th>Date</th><th>Paid</th><th>Balance</th><th>Status</th></tr></thead>
+                <tbody>${list.map(x=>`<tr><td>${new Date(x.paid_on).toLocaleDateString()}</td><td>₹${x.amount_paid}</td><td>₹${x.balance_amt}</td><td>${x.chit_picked==='Yes'?'✅':'-'}</td></tr>`).join('')}</tbody>
             </table></div></div>`;
     });
     document.getElementById(targetId).innerHTML = html || 'No data found';
@@ -263,22 +273,15 @@ function onAdminMemberChange() { renderMemberTable(payments.filter(p => p.name =
 function renderGroupsView() {
     document.getElementById('groupReportContainer').innerHTML = groups.map(g => {
         const gPays = payments.filter(p => p.group_name === g.name);
-        const gMembs = members.filter(m => m.group_name === g.name);
         const pCount = [...new Set(gPays.map(p => p.paid_on?.substring(0,7)))].length;
-        const total = g.total_months || 21;
-        return `<div class="card" onclick="toggleDetails('${g.id}')">
-            <div style="display:flex;justify-content:space-between;align-items:center;">
-                <b>📂 ${g.name}</b>
-                <span style="font-size:11px;color:var(--accent);font-weight:700;">${Math.max(0, total-pCount)} / ${total} MONTHS PENDING</span>
-            </div>
-            <div id="det-${g.id}" style="display:none;margin-top:15px;border-top:1px solid var(--border);padding-top:10px;">
-                <div class="table-wrap"><table><thead><tr><th>Member</th><th>Paid</th><th>Status</th></tr></thead>
-                <tbody>${gMembs.map(m=>{
-                    const mP = gPays.filter(px => px.member_id === m.id);
-                    const paid = mP.reduce((s,p)=>s+p.amount_paid,0);
-                    return `<tr><td>${m.name}</td><td>₹${paid}</td><td>${mP.some(p=>p.chit_picked==='Yes')?'PICKED':'-'}</td></tr>`;
-                }).join('')}</tbody></table></div>
-            </div></div>`;
+        return `<div class="card" onclick="toggleDetails('${g.id}')"><div style="display:flex;justify-content:space-between;"><b>📂 ${g.name}</b><span style="font-size:11px;color:var(--accent)">${Math.max(0, (g.total_months||21)-pCount)} / ${(g.total_months||21)} PENDING</span></div>
+        <div id="det-${g.id}" style="display:none;margin-top:15px;border-top:1px solid var(--border);padding-top:10px;">
+            <div class="table-wrap"><table><thead><tr><th>Member</th><th>Paid</th><th>Status</th></tr></thead>
+            <tbody>${members.filter(m=>m.group_name===g.name).map(m=>{
+                const paid = payments.filter(p=>p.member_id===m.id && p.group_name===g.name).reduce((s,p)=>s+p.amount_paid,0);
+                return `<tr><td>${m.name}</td><td>₹${paid}</td><td>${payments.some(p=>p.member_id===m.id && p.group_name===g.name && p.chit_picked==='Yes')?'PICKED':'-'}</td></tr>`;
+            }).join('')}</tbody></table></div>
+        </div></div>`;
     }).join('');
 }
 
@@ -291,7 +294,7 @@ async function executeAddMember(){
 
 async function executeAddGroup(){
     const id = document.getElementById('ng-select').value;
-    const data = { name: document.getElementById('ng-name').value, total_months: parseInt(document.getElementById('ng-months').value) };
+    const data = { name: document.getElementById('ng-name').value, total_months: document.getElementById('ng-months').value };
     const res = await fetch(id==='new' ? `${SB_URL}/rest/v1/groups` : `${SB_URL}/rest/v1/groups?id=eq.${id}`, { method: id==='new'?'POST':'PATCH', headers: H, body: JSON.stringify(data) });
     if(res.ok) { alert("Success!"); closeModal('addGroupModal'); refreshData(); }
 }
